client/src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import 'primeicons/primeicons.css';

:root {
  font-family: Roboto, sans-serif;
  color: #ffffff;
  --poster-width: 186px;
  --poster-height: 279px;
  --giant-text: 42px;
  --font-size: 14px;
  --content-width: 1728px;
  --wiki-content-width: 1142px;
  --mask-color: rgba(0, 0, 0, 0.8);
}

// 500px breaking point
@media only screen and (max-width: 500px) {
  .show-gt-500px {
    display: none !important;
  }
}
@media only screen and (min-width: 500px) {
  .show-lt-500px {
    display: none !important;
  }
}

// 700px breaking point
@media only screen and (max-width: 700px) {
  .show-gt-700px {
    display: none !important;
  }
}
@media only screen and (min-width: 700px) {
  .show-lt-700px {
    display: none !important;
  }
}

body {
  margin: 0;
  background: linear-gradient(rgba(28, 27, 34, 0.7), rgba(28, 27, 34, 0.7)), url('assets/escheresque_ste.webp');
}

.flex {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.flex-grow {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  > * {
    flex-grow: 1;
    flex-basis: 0;
  }
}

.flex-nowrap {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-items: center;
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.flex-column-100 {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.items-center {
  gap: 8px;
  align-items: center;
}

.p-3 {
  padding: 0.75rem;
}

.gap-1 {
  gap: 1px;
}

.gap-4 {
  gap: 4px;
}

.gap-8 {
  gap: 8px;
}

.width-100 {
  width: 100%;
}

.align-items-start {
  align-items: start;
}

.align-items-center {
  align-items: center;
}

.align-items-end {
  align-items: end;
}

.justify-content-start {
  justify-content: start;
}

.justify-content-center {
  justify-content: center;
}

.justify-content-space-between {
  justify-content: space-between;
}

.justify-content-end {
  justify-content: end;
}

.p-picklist-item:not(.cdk-drag-disabled) {
  cursor: move;
  z-index: 99999 !important;
}

.empty-trophy {
  width: 16px;
}

.p-overlaypanel {
  margin: 4px 4px 4px 0;
}

form {
  display: flex;
  flex-direction: column;
  gap: 8px;
  padding-top: 0.5rem;
}

.p-floatlabel {
  margin-bottom: 0.8rem;
  display: flex;
  flex-direction: column;
  > *:not(label),
  input {
    width: 100% !important;
  }
}

p-select {
  max-width: calc(100vw - 75px);
  .p-select {
    width: 100%;
  }
}

.dialog-footer {
  display: flex;
  justify-content: space-between;
  margin-top: 8px;
  gap: 16px;
  > div {
    display: flex;
    justify-content: start;
    gap: 16px;
  }
}

.p-datatable-table .p-datatable-thead tr th {
  padding: 0.5rem;
  white-space: nowrap;
}
.p-datatable-table .p-datatable-tbody tr td {
  border: 1px solid var(--p-surface-700);
  border-width: 0 0 1px 0;
  white-space: nowrap;
}
.p-datatable-flex-scrollable > .p-datatable-table-container {
  flex: 0;
}

.p-listbox:not(.p-disabled) .p-listbox-option:not(.p-listbox-option-selected):not(.p-disabled):hover {
  background: unset !important;
  color: unset !important;
  cursor: pointer;
}

